<resources>
    <string name="app_name">TodolistApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">ADD</string>
    <string name="image_description" >Image description</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next week</string>
    <string name="today">Today</string>
    <string name="due_date_text">Due Date</string>
    <string name="please_insert_due_date">Please insert due date</string>
    <string name="please_insert_task_title">Please insert task title</string>
    <string name="all_tasks">All tasks</string>
    <string name="today_s_tasks">Today\'s tasks</string>
    <string name="important_tasks">Important tasks</string>
    <string name="undo">UNDO</string>
    <string name="task_deleted">Task deleted</string>
    <string name="deleted_all_tasks">Deleted all tasks</string>
    <string name="deleted_completed_tasks">Deleted completed tasks</string>
    <string name="add_task">Add task</string>
    <string name="due_date">Due date</string>
    <string name="example_task">Example task</string>
    <string name="update_task">Update task</string>
    <string name="important">Important</string>
    <string name="all">All</string>
    <string name="delete_completed_tasks">Delete completed tasks</string>
    <string name="delete_all_tasks">Delete all tasks</string>
    <string name="set_due_date">Set due date</string>
    <string name="cb_for_completing_the_task">Check if the task is completed</string>
    <string name="check_if_the_task_is_important">Check if the task is important</string>
    <string name="btn_to_add_a_new_task">Add a new task</string>
    <string name="save_task_to_database">Save task to database</string>
</resources>