<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogAnimation"
    android:id="@+id/add_task_bottom_sheet"
    android:background="@drawable/add_task_dialog_background"
    app:behavior_hideable="false"
    app:behavior_peekHeight="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".view.fragments.AddTaskBottomSheetFragment">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottomSheetDragHandleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView">

        <EditText
            android:id="@+id/edit_text_add_title"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:autofillHints="Task title"
            android:hint="@string/add_task"
            android:textSize="20sp"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/button_save_task"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:backgroundTint="@color/theme_color"
            android:background="@drawable/rounded_corner_btn"
            android:contentDescription="@string/save_task_to_database"
            android:src="@drawable/baseline_arrow_upward_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTaskTitle">

        <CheckBox
            android:id="@+id/cb_important"
            style="@style/custom_star_checkbox"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />

        <ImageButton
            android:id="@+id/calendar_button"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/image_description"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/baseline_today_24" />

        <TextView
            android:id="@+id/tv_set_due_date"
            android:layout_width="140dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:text="@string/set_due_date"
            android:textSize="16sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutChooseDueDate"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutButtons">

        <TextView
            android:id="@+id/textView"
            android:layout_width="244dp"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/due_date_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/today_chip"
                android:layout_width="118dp"
                android:layout_height="41dp"
                android:layout_margin="4dp"
                android:textAlignment="center"
                android:layout_marginTop="2dp"
                android:text="@string/today" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tomorrow_chip"
                android:layout_width="118dp"
                android:textAlignment="center"
                android:layout_margin="4dp"
                android:layout_height="41dp"
                android:text="@string/tomorrow" />

        </LinearLayout>

        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="318dp"
            android:layout_height="296dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/calendar_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="linearLayoutChooseDueDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>